update swagger doc + fix minor errors
